feat: filter events
